[package]
name = "testangel-browser"
version = "0.3.1"
edition = "2021"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
description = "TestAngel engine for browser automation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib" ]

[dependencies]
lazy_static = "1.4.0"
testangel-engine = { git = "https://github.com/lilopkins/testangel.git" }
thirtyfour = "0.31.0"
tokio = "1.32.0"
thiserror = "1.0"
base64 = "0.21.4"
serde_json = "1.0.107"
