[package]
name = "testangel-browser"
version = "0.6.0"
edition = "2021"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
description = "TestAngel engine for browser automation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib" ]

[dependencies]
testangel-engine = { version = "1.0.0", git = "https://github.com/lilopkins/testangel.git", branch = "next" }
thirtyfour = "0.35.0"
tokio = "1.32.0"
thiserror = "2.0"
base64 = "0.22.0"
serde_json = "1.0.107"
dynamic-plugin = { version = "0.5.0", features = ["client"] }
